Fixed a variety of bugs and made island-loading async
Took 50 minutes